# cwc

./: .gitignore  README.md  setup.cfg  setup.py  wc.py
.github/workflows/: pypi.yml  testpypi.yml
cwc/: __init__.py  _cwc.py
tests/: test_cwc.py
