;; # https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = cwc
version = file: VERSION
url = https://github.com/kirin123kirin/cwc
author = kirin123kirin
author_email = kirin123kirin@gmail.com
description = cwc description
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_files = LICENSE

; # https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License

keywords = wordcloud

[options]
zip_safe = False
install_requires =
  setuptools>=42
  wheel

; # https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
include_package_data = True
packages = find:
# package_dir =
#     =cwc

# [options.packages.find]
# where = cwc
# include = 
#   inc*
# exclude =
#   exc*

[options.extras_require]
test =
    pytest
    pytest-cov
    psutil

[options.entry_points]
console_scripts =
    cwc = cwc.cwc:main

[build]
build_temp = build
build_base = build
build_platlib = build


[tool:pytest]
addopts = --capture=no -s -p no:cacheprovider
testpaths = tests


[aliases]
test=pytest


[flake8]
ignore = E302,W504,E402,F401,C901
max-line-length = 160
exclude = tests/*,test/*,.*,extern/*,build/*
max-complexity = 10

